# g4epp-source

./: .gitignore  CMakeLists.txt  EDIT_THIS_FILE.mac  MSISE00_atmosphere.csv  README.md  RUN_ALL.sh  all_beams.txt  atmosphericEPP_main.cc  batch_mode_test.mac  create_batch_script.jl  deleteme.jl  generate_MSISE00_atmosphere.py  initialize_visualization.mac  installation_and_running.txt  run_all.jl  run_beam.mac  run_single_beam.mac  set_simulation_parameters.mac  supercomputing_batch.sh  test.mac  visualization.mac
batch_scripts/: 10.0keV_0.0deg.sh  10.0keV_88.0deg.sh  10.0keV_90.0deg.sh  10000.0keV_0.0deg.sh  10000.0keV_88.0deg.sh  10000.0keV_90.0deg.sh  1082.0keV_0.0deg.sh  1082.0keV_10.0deg.sh  1082.0keV_15.0deg.sh  1082.0keV_20.0deg.sh  1082.0keV_25.0deg.sh  1082.0keV_30.0deg.sh  1082.0keV_35.0deg.sh  1082.0keV_40.0deg.sh  1082.0keV_45.0deg.sh  1082.0keV_5.0deg.sh  1082.0keV_50.0deg.sh  1082.0keV_55.0deg.sh  1082.0keV_60.0deg.sh  1082.0keV_61.0deg.sh  1082.0keV_62.0deg.sh  1082.0keV_63.0deg.sh  1082.0keV_64.0deg.sh  1082.0keV_65.0deg.sh  1082.0keV_66.0deg.sh  1082.0keV_67.0deg.sh  1082.0keV_68.0deg.sh  1082.0keV_69.0deg.sh  1082.0keV_70.0deg.sh  1082.0keV_75.0deg.sh  1082.0keV_80.0deg.sh  1082.0keV_85.0deg.sh  1082.0keV_90.0deg.sh  10keV_0deg.sh  10keV_30deg.sh  10keV_70deg.sh  10keV_80deg.sh  10keV_90deg.sh  139.0keV_0.0deg.sh  139.0keV_10.0deg.sh  (+1487 more)
include/: ActionInitialization.hh  DetectorConstruction.hh  DetectorMessenger.hh  EarthDipoleField.hh  EarthDipoleFieldMessenger.hh  EventAction.hh  F03FieldMessenger.hh  F03FieldSetup.hh  PrimaryGeneratorAction.hh  PrimaryGeneratorMessenger.hh  RunAction.hh  RunActionMessenger.hh  SteppingAction.hh  SteppingActionMessenger.hh  myHistogram.hh
src/: ActionInitialization.cc  DetectorConstruction.cc  DetectorMessenger.cc  EarthDipoleField.cc  EarthDipoleFieldMessenger.cc  EventAction.cc  F03FieldMessenger.cc  F03FieldSetup.cc  OLD_SteppingAction.xx  PrimaryGeneratorAction.cc  PrimaryGeneratorMessenger.cc  RunAction.cc  RunActionMessenger.cc  SteppingAction.cc  SteppingActionMessenger.cc
unusedFiles/: OLDrunBeamOn.mac  QBBC_EPP.cc  QBBC_EPP.hh  runBeamOnTest.mac  runBeamOn_forward.mac  runBeamOn_inverse.mac  runBeamOn_inverse_call.mac
